--- a/incl/CMakeLists.txt
+++ b/incl/CMakeLists.txt
@@ -1,6 +1,8 @@
-set(HEADER_LIST
-    unistd.h
-)
+IF (WIN32)
+    set(HEADER_LIST
+        unistd.h
+    )
 
-target_sources(${TARGET_NAME} PUBLIC ${HEADER_LIST})
-target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+    target_sources(${TARGET_NAME} PUBLIC ${HEADER_LIST})
+    target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+ENDIF()
